--- a/index.html
+++ b/index.html
@@ -65,17 +65,19 @@
 
     /* The Close Button */
     .close {
-      color: white;
+      color: rgba(0, 0, 0, 0);
       position: absolute;
-      top: 10px;
-      right: 25px;
-      font-size: 35px;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      font-size: 200px;
       font-weight: bold;
     }
 
     .close:hover,
     .close:focus {
-      color: #999;
+      /* color: #999; */
       text-decoration: none;
       cursor: pointer;
     }
@@ -258,6 +260,10 @@
   </div>
 
   <script>
+
+
+
+
     // Open the Modal
     function openModal() {
       document.getElementById('myModal').style.display = "flex";
